rough draft complete.

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     <section class="about py-5" id="about_section">
         <div class="container py-5">
             <div class="row">
-                <div class="col-lg-5 about_img" data-aos="fade-right" data-aos-duration="1000">
-                    <img src="./images/RedTeamLogoBlack.png" class="img-fluid" alt="">
+                <div class="col-lg-5 about_img text-center" data-aos="fade-right" data-aos-duration="1000">
+                    <img src="./images/GarettProfessional.jpg" class="img-fluid " alt="">
                     <p class="text-center logotext mt-2">Garett Cook</p>
                     <p class="text-center">CEO and Creator of SAIL VR</p>
                 </div>
@@ -114,30 +114,30 @@
                         <div class="row my-auto d-flex justify-content-around">
                           
                             <div class="col-lg-3 " data-aos="fade-left" data-aos-duration="1000">
-                                <img class="logo img-fluid" src="./images/DarioProfessional.jpg" alt="">
+                                <img class="logo img-fluid" src="./images/CameronProfessional.jpg" alt="">
                                 <br>
-                                <p class="text-center logotext">Cameron Churchill</p>
+                                <p class="text-center logotext">Cameron<br>Churchill</p>
                                 <p class="text-center">CTO and Game Developer</p>
                             </div>
 
                             <div class="col-lg-3 " data-aos="fade-left" data-aos-duration="1000">
                                 <img class="logo img-fluid" src="./images/DarioProfessional.jpg" alt="">
                                 <br>
-                                <p class="text-center logotext">Dario Zuluaga</p>
+                                <p class="text-center logotext">Dario<br>Zuluaga</p>
                                 <p class="text-center">Lead Technical Artist</p>
                             </div>
 
                             <div class="col-lg-3 " data-aos="fade-left" data-aos-duration="1000">
                                 <img class="logo img-fluid" src="./images/DarioProfessional.jpg" alt="">
                                 <br>
-                                <p class="text-center logotext">Benjamin Duncan</p>
+                                <p class="text-center logotext">Benjamin<br>Duncan</p>
                                 <p class="text-center">Full-Stack Developer</p>
                             </div>
 
                             <div class="col-lg-3 " data-aos="fade-left" data-aos-duration="1000">
                                 <img class="logo img-fluid" src="./images/JoshuaProfessional.jpg" alt="">
                                 <br>
-                                <p class="text-center logotext">Joshua Zuluaga</p>
+                                <p class="text-center logotext">Joshua<br>Zuluaga</p>
                                 <p class="text-center">Junior Developer</p>
                             </div>
 
@@ -283,8 +283,8 @@
                     </div>
 
                 </div> -->
-                <div class="gameCard col-lg-6 pb-2" data-aos="fade-down" data-aos-duration="1000">
-                    <div class="item py-4 ">
+                <div class="gameCard col-lg-6 pb-2 " data-aos="fade-down" data-aos-duration="1000">
+                    <div class="item py-5 ">
                         <img src="./images/SailLogo.png" class="img-fluid Filter Game port-image" alt="">
                         <span><i class="fa-solid fa-door-open" 
                                 onclick="location= 'https://www.meta.com/experiences/4861702420530349/#?'"></i></span>
@@ -337,38 +337,35 @@
                 <div class="col-lg-4 mb-3" data-aos="flip-right" data-aos-duration="1000">
                     <div class="card">
                         <img src="./images/Ginyu_Music_Capture.JPG" class="rounded-top  blog-img" alt="">
-                        <small class="px-3 py-3 font-weight-bold"> Web Design</small>
-                        <h5 class="font-weight-bold px-3"> Ginyu Force Music Search</h5>
-                        <p class="px-3">Artist song and venue search engine</p>
-                        <a href="https://5hakazulu.github.io/GinyuForce/" class="font-weight-bold px-3 pb-4"><u>Visit
+                        <small class="px-3 py-3 font-weight-bold"> test category</small>
+                        <h5 class="font-weight-bold px-3"> Test Title</h5>
+                        <p class="px-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tellus lacus, efficitur eu sollicitudin eget, congue vel augue.</p>
+                        <a href="" class="font-weight-bold px-3 pb-4"><u>Visit
                                 the Site</u></a>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-3" data-aos="flip-down" data-aos-duration="1000">
+                <div class="col-lg-4 mb-3" data-aos="flip-right" data-aos-duration="1000">
                     <div class="card">
-                        <img src="./images/Super_Kaiju_Chase.jpg" class="rounded-top blog-img" alt="">
-                        <small class="px-3 py-3 font-weight-bold"> Game Design</small>
-                        <h5 class="font-weight-bold px-3"> Super Kaiju Chase</h5>
-                        <p class="px-3">Game made in the unity app for the Kaijujam</p>
-                        <a href="https://itch.io/jam/kaijujam/rate/1391290" class="font-weight-bold px-3 pb-4"><u>Play
-                                the Game</u></a>
+                        <img src="./images/Ginyu_Music_Capture.JPG" class="rounded-top  blog-img" alt="">
+                        <small class="px-3 py-3 font-weight-bold"> test category</small>
+                        <h5 class="font-weight-bold px-3"> Test Title</h5>
+                        <p class="px-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tellus lacus, efficitur eu sollicitudin eget, congue vel augue.</p>
+                        <a href="" class="font-weight-bold px-3 pb-4"><u>Visit
+                                the Site</u></a>
                     </div>
                 </div>
-                <!-- fix this once we get the site live -->
-                <div class="col-lg-4 mb-3" data-aos="flip-left" data-aos-duration="1000">
+                <div class="col-lg-4 mb-3" data-aos="flip-right" data-aos-duration="1000">
                     <div class="card">
-                        <!-- fix the image -->
-                        <img src="./images/Shelf_Control.jpg" class="rounded-top blog-img" alt="">
-                        <small class="px-3 py-3 font-weight-bold"> Web Design</small>
-                        <h5 class="font-weight-bold px-3"> Shelf Control</h5>
-                        <p class="px-3">book shelf managing app (still in progress)</p>
-                        <!-- change the link to the website once it is live -->
-                        <a href="https://shelf-control-app.onrender.com/" class="font-weight-bold px-3 pb-4"><u>Visit
+                        <img src="./images/Ginyu_Music_Capture.JPG" class="rounded-top  blog-img" alt="">
+                        <small class="px-3 py-3 font-weight-bold"> test category</small>
+                        <h5 class="font-weight-bold px-3"> Test Title</h5>
+                        <p class="px-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tellus lacus, efficitur eu sollicitudin eget, congue vel augue.</p>
+                        <a href="" class="font-weight-bold px-3 pb-4"><u>Visit
                                 the Site</u></a>
+                    </div>
+                </div>
 
-                    </div>
-                </div>
-                <!-- fix this once we get the site live -->
+
             </div>
         </div>
     </section>
@@ -376,7 +373,7 @@
     <section class="contact py-5" id="contact_section">
         <div class="container py-5">
             <h1 class="text-center" data-aos="fade-down" data-aos-duration="1000">Contact</h1>
-            <div class="row py-5" data-aos="fade-down" data-aos-duration="1000">
+            <!-- <div class="row py-5" data-aos="fade-down" data-aos-duration="1000">
                 <div class="col-lg-10 mx-auto">
                     <div class="row text-center">
                         <div class="col-lg-3">
@@ -421,27 +418,27 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row" data-aos="fade-down" data-aos-duration="1000">
-                <div class="col-lg-9 mx-auto">
+            </div> -->
+            <div class="row py-5" data-aos="fade-down" data-aos-duration="1000">
+                <div class="col-lg-9 mx-auto text-center">
                     <form action="https://formsubmit.co/jdzulu89@gmail.com" method="POST">
                         <div class="form-row mx-auto ">
                             <div class="col-lg-5 d-inline-block me-3">
-                                <input type="text" class="form-control bg-light mb-3" placeholder="Name" name="name"
+                                <input type="text" class="form-control bg-light mb-4" placeholder="Name" name="name"
                                     required>
                             </div>
                             <div class="col-lg-5 d-inline-block ">
-                                <input type="text" class="form-control bg-light mb-3" placeholder="Email" name="email"
+                                <input type="text" class="form-control bg-light mb-4" placeholder="Email" name="email"
                                     required>
                             </div>
                         </div>
-                        <div class="form-row">
+                        <div class="form-row text-center">
                             <div class="col-lg-12">
                                 <textarea placeholder="Your Message" class="form-control bg-light" cols="30" rows="10"
                                     name="message" required></textarea>
                             </div>
                         </div>
-                        <button class="btn3 my-4">Submit</button>
+                        <button class="btn3 my-4 ">Submit</button>
                     </form>
                 </div>
             </div>
@@ -453,22 +450,7 @@
         <p id="date"></p>
     </footer>
 
-    <div class="portfolio-modal modal fade mt-5" id="portfoliomodal" data-backdrop="static"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true" role="dialog">
-        <div class="modal-dialog modal-xl" role="document">
-            <div class="modal-content text-center">
-                <div class="modal-body text-center">
-                    <div class="container-fluid py-3">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-12">
-                                <img src="" class="img-fluid rounded pop-up-image" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
 
     <script>
         let currentDate = new Date();
@@ -477,7 +459,7 @@
         let day = currentDate.getDate();
         let formattedDate = month + "/" + day + "/" + year;
 
-        document.getElementById("date").innerHTML = "Joshua Zuluaga &copy; " + year;
+        document.getElementById("date").innerHTML = "Red Team Interactive &copy; " + year;
     </script>
 
     <script>
@@ -500,14 +482,7 @@
         })
     </script>
 
-    <script>
-        function openModal(imgSrc) {
-            var modal = document.getElementById("portfoliomodal");
-            var modalImg = modal.querySelector("img");
-            modal.style.display = "block";
-            modalImg.src = imgSrc;
-        }
-    </script>
+
 
     <script>
         // Use jQuery to select all nav-link elements and add a click event listener
