added Bens Photo

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             </div>
 
                             <div class="col-lg-3 " data-aos="fade-left" data-aos-duration="1000">
-                                <img class="logo img-fluid" src="./images/DarioProfessional.jpg" alt="">
+                                <img class="logo img-fluid" src="./images/BenProfessional.jpg" alt="">
                                 <br>
                                 <p class="text-center logotext">Benjamin<br>Duncan</p>
                                 <p class="text-center">Full-Stack Developer</p>
