screen size responsiveness.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class=" container  ">
             <div class="logo-card  row py-lg-5 py-md-2">
                 <div class="">
-                    <div class=" title_card col-lg-6 col-sm- col-md-6 py-5 px-5" data-aos="zoom-out" data-aos-easing="ease-out-in">
+                    <div class=" title_card col-lg-6 col-sm-7 col-md-6 py-5 px-5" data-aos="zoom-out" data-aos-easing="ease-out-in">
                         <div class="  mx-auto  text-center">
 
                             <img src="./images/RedTeamLogoBlack.png" class="redTeamLogo col-lg- py-4 px-4 " data-aos="fade" data-aos-duration="1000"
@@ -226,8 +226,8 @@
 
             <div class="row pt-3 justify-content-center">
                  <div class="gameCard col-lg-6 pb-2 " data-aos="fade-down" data-aos-duration="1000">
-                    <div class="item py-5 ">
-                        <img src="./images/SailLogo.png" class="img-fluid Filter Game port-image" alt="">
+                    <div class="item py-5 px-4">
+                        <img src="./images/SailLogo.png" class="img-fluid sail_logo" alt="">
                         <span><i class="fa-solid fa-door-open" 
                                 onclick="location= 'https://www.meta.com/experiences/4861702420530349/#?'"></i></span>
                     </div>
@@ -244,7 +244,7 @@
     <section class="Video py-5" id="video_section">
         <div class="container py-5">
             <h1 class="text-center py-5" data-aos="fade-down" data-aos-duration="1000">Trailer</h1>
-            <div class=" row ratio ratio-16x9 ">
+            <div class=" row ratio ratio-16x9 text-center">
                 <iframe src="https://www.youtube.com/embed/YPCyx1h1rtU?si=lXnkW5ma-dlrJRw2" title="YouTube video" allowfullscreen></iframe>
               </div>
            
@@ -257,61 +257,16 @@
     <section class="contact py-5" id="contact_section">
         <div class="container py-5">
             <h1 class="text-center" data-aos="fade-down" data-aos-duration="1000">Contact</h1>
-            <!-- <div class="row py-5" data-aos="fade-down" data-aos-duration="1000">
-                <div class="col-lg-10 mx-auto">
-                    <div class="row text-center">
-                        <div class="col-lg-3">
-                            <div class="circle">
-                                <span><i class="fa-solid fa-location-dot"></i></span>
-                            </div>
-                            <h5>Address</h5>
-                            <p> Jefferson, Georgia</p>
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="circle">
-                                <a href="./JOSHUA ZULUAGA Resume.pdf" download="Joshua_Zuluaga_Resume.pdf">
-                                    <span><i class="fa-solid fa-file"></i></span>
-                                </a>
-                            </div>
-                            <h5>Resume</h5>
-                            <p>Click to Download</p>
 
-                        </div>
-                        <div class="col-lg-3">
-                            <div class="circle">
-                                <a href="https://www.linkedin.com/in/jdzulu/">
-                                    <span><i class="fa-brands fa-linkedin"></i></span>
-                                </a>
-
-                            </div>
-                            <h5>Linkedin</h5>
-                            <p>Click Me</p>
-
-                        </div>
-
-                        <div class="col-lg-3">
-                            <div class="circle">
-                                <a href="https://github.com/5hakazulu">
-                                    <span><i class="fa-brands fa-github"></i></span>
-                                </a>
-
-                            </div>
-                            <h5>GitHub</h5>
-                            <p>Click Me</p>
-
-                        </div>
-                    </div>
-                </div>
-            </div> -->
             <div class="row py-5" data-aos="fade-down" data-aos-duration="1000">
                 <div class="col-lg-9 mx-auto text-center">
                     <form action="https://formsubmit.co/garett@redteam.games" method="POST">
                         <div class="form-row mx-auto ">
-                            <div class="col-lg-5 d-inline-block me-3">
+                            <div class="col-lg-5 col-sm-12 d-inline-block me-lg-3">
                                 <input type="text" class="form-control bg-light mb-4" placeholder="Name" name="name"
                                     required>
                             </div>
-                            <div class="col-lg-5 d-inline-block ">
+                            <div class="col-lg-5 col-sm-12 d-inline-block ">
                                 <input type="text" class="form-control bg-light mb-4" placeholder="Email" name="email"
                                     required>
                             </div>
