changed the icon for the link to meta game page.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="container my-auto">
                         <div class="row my-auto d-flex justify-content-around">
                           
-                            <div class="col-lg-4 col-xl-3 text-center" data-aos="fade-left" data-aos-duration="1000">
+                            <div class="col-md-2 col-lg-4 col-xl-3 text-center d-inline" data-aos="fade-left" data-aos-duration="1000">
                                 <img class="logo img-fluid" src="./images/CameronProfessional.jpg" alt="">
                                 <br>
                                 <p class="text-center logotext">Cameron<br>Churchill</p>
@@ -228,7 +228,7 @@
                  <div class="gameCard col-lg-6 pb-2 " data-aos="fade-down" data-aos-duration="1000">
                     <div class="item py-5 px-4">
                         <img src="./images/SailLogo.png" class="img-fluid sail_logo" alt="">
-                        <span><i class="fa-solid fa-door-open" 
+                        <span><i class="fa-solid fa-link" 
                                 onclick="location= 'https://www.meta.com/experiences/4861702420530349/#?'"></i></span>
                     </div>
                 </div>
