fixed the navbar which had mislabeled links.

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                             <a class="nav-link px-lg-4 rounded nav-link-collapse" href="#about_section">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-lg-4 rounded nav-link-collapse" href="#services_section">Services</a>
+                            <a class="nav-link px-lg-4 rounded nav-link-collapse" href="#socials_section">Socials</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link px-lg-4 rounded nav-link-collapse"
-                                href="#portfolio_section">Games</a>
+                                href="#Games_section">Games</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link  px-lg-4 rounded nav-link-collapse" href="#blog_section">Blog</a>
+                            <a class="nav-link  px-lg-4 rounded nav-link-collapse" href="#video_section">Videos</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link  px-lg-4 rounded nav-link-collapse" href="#contact_section">Contact</a>
@@ -219,7 +219,7 @@
 
     </section>
 
-    <section class="portfolio py-5" id="portfolio_section">
+    <section class="portfolio py-5" id="Games_section">
         <div class="container text-center py-5">
             <h1 class="text-center pb-5" data-aos="fade-down" data-aos-duration="1000">Games</h1>
 
