--- a/index.html
+++ b/index.html
@@ -112,25 +112,28 @@
                     <div class="container my-auto">
                         <div class="row my-auto d-flex justify-content-around">
                           
-                            <div class="col-md-2 col-lg-4 col-xl-3 text-center d-inline" data-aos="fade-left" data-aos-duration="1000">
+                            <div class="col-lg-3 col-xl-3 col-md-3 col-sm-3 text-center d-inline" data-aos="fade-left" data-aos-duration="1000">
                                 <img class="logo img-fluid" src="./images/CameronProfessional.jpg" alt="">
                                 <br>
-                                <p class="text-center logotext">Cameron<br>Churchill</p>
-                                <p class="text-center">CTO and Game Developer</p>
+                                <p class="row text-center logotext d-inline">Cameron Churchill</p>
+                                <br>
+                                <p class=" row text-center d-inline">CTO and Game Developer</p>
                             </div>
 
-                            <div class="col-lg-4 col-xl-3 text-center" data-aos="fade-left" data-aos-duration="1000">
+                            <div class="col-lg-3 col-md-3 col-xl-3 col-sm-3 text-center d-inline" data-aos="fade-left" data-aos-duration="1000">
                                 <img class="logo img-fluid" src="./images/DarioProfessional.jpg" alt="">
                                 <br>
-                                <p class="text-center logotext">Dario<br>Zuluaga</p>
-                                <p class="text-center">Lead Technical Artist</p>
+                                <p class="text-center logotext d-inline">Dario Zuluaga</p>
+                                <br>
+                                <p class="text-center d-inline">Lead Technical Artist</p>
                             </div>
 
-                            <div class="col-lg-4 col-xl-3 text-center" data-aos="fade-left" data-aos-duration="1000">
+                            <div class="col-lg-3 col-md-3 col-xl-3 col-sm-3 text-center d-inline" data-aos="fade-left" data-aos-duration="1000">
                                 <img class="logo img-fluid" src="./images/BenProfessional.jpg" alt="">
                                 <br>
-                                <p class="text-center logotext">Benjamin<br>Duncan</p>
-                                <p class="text-center">Full-Stack Developer</p>
+                                <p class="text-center logotext d-inline">Benjamin Duncan</p>
+                                <br>
+                                <p class="text-center d-inline">Full-Stack Developer</p>
                             </div>
 
                             <!-- <div class="col-lg-3 " data-aos="fade-left" data-aos-duration="1000">
@@ -162,28 +165,30 @@
     </section>
 
     <section class="socials py-5 " id="socials_section">
-        <div class="container py-5">
+        <div class="container py-5 ">
             <h1 class="text-center pb-5 " data-aos="zoom-in" data-aos-duration="1000">Socials</h1>
-            <div class="row pb-3">
-                <div class="col-lg-4 mb-3" data-aos="fade-down-right" data-aos-duration="1000">
+            <div class="row pb-3  d-flex justify-content-around">
+                <div class="col-lg-4 col-md-4 col-sm-5 mb-3" data-aos="fade-down-right" data-aos-duration="1000">
                     <div class=" card text-center py-3 services-card">
-                        <div class="card-body " style="height: 280px;">
-                            <div class="circle">
-                                <span>
+                        <div class="card-body d-inline" style="height: 280px;">
+                            <div class="circle pt-3 ">
+                                <span class=" ">
                                     <i class="fa-brands fa-youtube" onclick="location= 'https://www.youtube.com/@Sail_VR'"></i>
                                 </span>
 
                             </div>
-                            <h4 class="font-weight-bold pb-2">YouTube</h4>
-                            <p class="px-2">Watch more videos on YouTube and follow along with our progress. </p>
+                            <br>
+                            <h4 class="font-weight-bold pb-2 d-inline">YouTube</h4>
+                            <br>
+                            <p class="px-2 d-inline">Watch more videos on YouTube and follow along with our progress. </p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-4 mb-3" data-aos="fade-down" data-aos-duration="1000">
+                <div class="col-lg-4 col-md-4 col-sm-5 mb-3" data-aos="fade-down" data-aos-duration="1000">
                     <div class="card text-center py-3 services-card d-flex align-items-center">
                         <div class="card-body " style="height: 280px;">
-                            <div class="circle">
+                            <div class="circle pt-3">
                                 <span>
                                     <i class="fa-brands fa-tiktok" onclick="location= 'https://www.tiktok.com/@sail_vr'"></i>
                                 </span>
@@ -196,10 +201,10 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 mb-3" data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="col-lg-4 col-md-4 col-sm-5 mb-3" data-aos="fade-down-left" data-aos-duration="1000">
                     <div class="card text-center py-3  " >
                         <div class="card-body " style="height: 280px;">
-                            <div class="circle">
+                            <div class="circle pt-3">
                                 <span>
                                     <i class=" fa-brands fa-discord" onclick="location= 'https://discord.gg/euazMmp'"></i>
                                 </span>
@@ -285,8 +290,8 @@
         </div>
     </section>
 
-    <footer class="text-center py-3">
-        <p id="date"></p>
+    <footer class="text-center py-1 py-sm-0 fixed-bottom">
+        <p class=" Footer_Text mt-1 pt-1 mt-sm-0 pt-sm-0" id="date"></p>
     </footer>
 
 
